<resources>
    <string name="app_name">RegisMagicFeeder</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_LastName">Apellido</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_Password">Contraseña</string>
    <string name="hint_aceptar">Registrarse</string>
    <string name="hint_cancelar">Cancelar</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="hint_Email">Correo Electrónico</string>
    <string name="titulo">Registro Magic Feeder</string>
    <string name="texto_terms">He leído y acepto todos los términos y condiciones.</string>
    <string name="form_required_field">Campo requerido.</string>
</resources>